added some props

--- a/index.html
+++ b/index.html
@@ -36,3 +36,6 @@ console.error = (function(old) {
   }
 })(console.error);
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-with-addons.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
+<script src="components.js"></script>
