--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ console.error = (function(old) {
   }
 })(console.error);
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-with-addons.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
-<script src="components.js"></script>
+<script type="text/babel" src="components.js"></script>
